--- a/templates/index.html
+++ b/templates/index.html
@@ -207,7 +207,7 @@ tr:hover {
   </div>
 
   <div class="footer">
-    © Trường Tiểu học Trần Quốc Toản - Phòng GD&ĐT TP. Pleiku
+    © Trường Tiểu học Trần Quốc Toản - Phường An Bình - Tỉnh Gia Lai
   </div>
 </body>
 </html>
